--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <h2>Datos personales</h2>
         <div class="gris_claro">
             <p>
-            Nombre y Apellidos: Aguirre Pacheco<br>
-            Dirección: C./ Toledo, nº 13, p. 7 - 46027 Valencia<br>
-            D.N.I.: 27.182.818-S
+            <span>Nombre y Apellidos:</span> Atanagildo Aguirre Pacheco<br>
+            <span>Dirección:</span> C./ Toledo, nº 13, p. 7 - 46027 Valencia<br>
+            <span>D.N.I.:</span> 27.182.818-S
         </div>
     </section>
     <section>
         <h2>Educación y formación</h2>
-        <div>
+        <div class="gris_claro">
             <p>
-            2015-2017: Ciclo Formativo de Grado Superior Administración de Sistemas Informáticos en Red (modalidad semipresencial). Instituto de Enseñanza Secundaria Abastos (Valencia).<br>
-            2013-2015: Ciclo Formativo de Grado Superior Desarrollo de Aplicaciones Multiplataforma. Instituto de Formación Profesional Vicenteta (Patraix). Instituto de Formación Profesional Vicenteta (Patraix).
+            <span>2015-2017:</span> Ciclo Formativo de Grado Superior Administración de Sistemas Informáticos en Red (modalidad semipresencial). <strong>Instituto de Enseñanza Secundaria Abastos</strong> (Valencia).<br>
+            <span>2013-2015:</span> Ciclo Formativo de Grado Superior Desarrollo de Aplicaciones Multiplataforma. <strong>Instituto de Formación Profesional Vicenteta</strong> (Patraix).
             </p>
         </div>
     </section>
@@ -42,10 +42,11 @@
         <h3 class="idiomas">Idiomas</h3>
         <div class="gris_claro">
             <p>
-            Inglés: Nivel Alto. Título nivel C1, por la Escuela Oficial de Idiomas de Valencia.<br>
-            Valenciano: Nivel Medio. Certificado de Coneixements de Valencià Grau Mitjà, por la Junta Qualificadora de Coneixements de Valencià. Conselleria d'Educació, Investigació, Cultura i Esport.
+            <span>Inglés:</span> Nivel Alto. Título nivel C1, por la <strong>Escuela Oficial de Idiomas de Valencia.</strong><br>
+            <span>Valenciano:</span> Nivel Medio. Certificado de Coneixements de Valencià Grau Mitjà, por la <strong>Junta Qualificadora de Coneixements de Valencià.</strong> Conselleria d'Educació, Investigació, Cultura i Esport.
             </p>
         </div>
+        <hr>
     </section>
     <footer>
         <p class="autor">
